Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68293

crash on exit for trivial unit test stub

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.1
    • 5.11.0 RC 1
    • WebEngine
    • None
    • 37866eaa4d5fde13a313b69fe2111937a38dd69c, e9bf15595 (134-based-refactor), 02b470ae6 (134-based-refactor)

      Consider two liner code:

      void tst_Simple::initTestCase()
      {
          QtWebEngine::initialize();
          QQuickWebEngineProfile::defaultProfile();
      }
      

      This crashes from time to time with

      1  base::debug::(anonymous namespace)::DebugBreak                                                                              debugger_posix.cc                    239 0x7fffed235dc4 
      2  base::debug::BreakDebugger                                                                                                  debugger_posix.cc                    258 0x7fffed235ddc 
      3  base::debug::(anonymous namespace)::StackDumpSignalHandler                                                                  stack_trace_posix.cc                 257 0x7fffed23817a 
      4  __restore_rt                                                                                                                                                         0x7fffe6a48be0 
      5  base::subtle::RefCountedThreadSafeBase::AddRefImpl                                                                          ref_counted.h                        191 0x7fffe97151fe 
      6  base::subtle::RefCountedThreadSafeBase::AddRef                                                                              ref_counted.h                        171 0x7fffe97e23e2 
      7  base::RefCountedThreadSafe<mojo::edk::ports::Port, base::DefaultRefCountedThreadSafeTraits<mojo::edk::ports::Port>>::AddRef ref_counted.h                        381 0x7fffeaae5612 
      8  scoped_refptr<mojo::edk::ports::Port>::AddRef                                                                               scoped_refptr.h                      263 0x7fffeaae3e2a 
      9  scoped_refptr<mojo::edk::ports::Port>::scoped_refptr                                                                        scoped_refptr.h                      165 0x7fffeaae3822 
      10 scoped_refptr<mojo::edk::ports::Port>::scoped_refptr                                                                        scoped_refptr.h                      170 0x7fffeaae3d7e 
      11 mojo::edk::ports::PortRef::PortRef                                                                                          port_ref.h                           19  0x7fffeaaeb2c3 
      12 mojo::edk::MessagePipeDispatcher::MessagePipeDispatcher                                                                     message_pipe_dispatcher.cc           95  0x7fffef8a06b9 
      13 mojo::edk::Core::CreatePartialMessagePipe                                                                                   core.cc                              203 0x7fffef88b1d1 
      14 mojo::edk::OutgoingBrokerClientInvitation::ExtractInProcessMessagePipe                                                      outgoing_broker_client_invitation.cc 46  0x7fffeaacb946 
      15 content::ChildThreadImpl::Init                                                                                              child_thread_impl.cc                 468 0x7fffefd8c0c1 
      16 content::ChildThreadImpl::ChildThreadImpl                                                                                   child_thread_impl.cc                 390 0x7fffefd8b4aa 
      17 content::GpuChildThread::GpuChildThread                                                                                     gpu_child_thread.cc                  175 0x7ffff18c8a61 
      18 content::GpuChildThread::GpuChildThread                                                                                     gpu_child_thread.cc                  167 0x7ffff18c8694 
      19 content::InProcessGpuThread::Init                                                                                           in_process_gpu_thread.cc             70  0x7ffff18cc055 
      20 base::Thread::ThreadMain                                                                                                    thread.cc                            327 0x7fffed398b13 
      21 base::(anonymous namespace)::ThreadFunc                                                                                     platform_thread_posix.cc             75  0x7fffed38cba5 
      22 start_thread                                                                                                                pthread_create.c                     456 0x7fffe6a3c6a7 
      23 clone                                                                                                                       clone.S                              97  0x7fffe5e4ec5f 
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            michal Michal Klocek
            michal Michal Klocek
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes