Fix race condition on gpu thread initialization

If browser io thread cleans up iself before
gpu thread get fully initalize, it will end up in
crash due to premature resourse release.

Make sure the in_process_gpu_thread is started,
before running thread termination.

Task-number: QTBUG-68293
Change-Id: I2940c86aaacb8a9ab634b5cdae1c8614dda23b44
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>